# mellow

./: .gitignore  Bakefile  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  build.sh  cmake_install.cmake  makebuild  server_test.md
app/: package.json
app/gui/: main.js  preload.js
app/src/: main.js  preload.js
app/src/render/: index.html
app/src/render/core/: console.html
app/src/render/pages/: manual.html
app/src/render/pages/man/: package-installation.html
app/src/render/styles/: console.css  styles.css
common/: common.h  gethome.h
debug/: build.ninja  cmake_install.cmake
debug/.cmake/api/v1/reply/: cache-v2-47aebe0e4651c8f035e9.json  cache-v2-49ae09230607d86bfe10.json  cmakeFiles-v1-036ed9bcd34357ee276f.json  cmakeFiles-v1-295c93eba4a9983f63e4.json  codemodel-v2-1d46f3f7e1f1abafc39d.json  codemodel-v2-cab73425be10c2e71ce3.json  codemodel-v2-f2a83c9a1b33ad0b969d.json  index-2024-08-17T11-25-24-0208.json  index-2024-08-17T14-40-57-0220.json  index-2024-08-21T11-21-04-0715.json  target-mellow-Debug-662de90de9b933ff16fb.json  target-mellow-Debug-6f7847b76110386c9b79.json  target-mellow-Debug-957812cbaae2191a3961.json  target-setup-Debug-483ae3fa8194b2369c55.json  target-setup-Debug-6838c8c857ea1365beb4.json  target-setup-Debug-859a06a63c372164c221.json
gui/: package-lock.json  package.json
gui/app/render/styles/: backbutton.css  positions.css
gui/js/: main.js  preload.js
gui/js/aur/: home.html
gui/js/render/: index.html
include/: common.h  files.h  imports.h  links.h  setup.h  urls.h
include/scripts/: wget.h
pkgs/links/: index.msx  links.msx
pkgs/scripts/: getgit.bat  getgit.sh  installer.bat  installer.sh
scraper/: scraper.c
scraper/json/: prettyprint.c
setup/: checkpkgs.c  curl.c  install.c  mkdir.cpp  rmdir.cpp  setup.c
setup/conf/: global.ini  packages.ini  usr.ini
setup/parser/: ini.c  readfile.c  translate.c
setup/parser/ini/: formatfield.cpp
setup/scripts/: getmissing.c  makepkg.c
setup/string/: string.c  string.cpp
setup/tools/: downloadpkg.c
src/: aurhelper.c  dispresults.c  downloader.c  fetch.c  files.cpp  fm.c  folders.cpp  get.c  git.c  help.c  install.c  main.c  make_folder.cpp  match.c  mellow.c  prepare.cpp  reset.cpp  scriptrunner.c  splitfiles.c  wget.c
src/git/: clone.c
src/gui/: package.json
src/gui/app/: preload.js
src/json/: filtrejson.c  formatdata.c  formatjson.c  getdata.c  jsonfiltre.c  jsonformatter.c  prettyprint.c
src/linux/: aur.c
src/parser/: html.cpp  ini.c
src/scraper/: scraper.c
src/scripts/: build.c  rmdeps.c  rmpkgs.c  uninstall.c
src/setup/: curl.c  install.c  mkdir.cpp  setup.c
src/setup/parser/: ini.c  translate.c  writefile.c
src/setup/parser/ini/: formatfield.cpp
src/setup/scripts/: getmissing.c
src/setup/tools/: downloadpkg.c  makepkg.c
src/update/: init.c  sync.c
src/utils/: clrscr.c  download.c
src/web/: getpkg.c  scraper.c
src/windows/: getfile.cpp
